--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.ruff]
 # Allow lines to be as long as 80.
-line-length = 80
+line-length = 200 # annoying asf
 exclude = [
     # External file, leaving license intact
     "examples/fp8/quantizer/quantize.py"
